--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Psychic Game</h1>
+            <p id="wins"></p>
+        </div>
+    </div>
 
 
 
