--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!-- local css -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -17,7 +18,16 @@
     <div class="container">
         <div class="jumbotron">
             <h1>Psychic Game</h1>
-            <p id="wins"></p>
+            <h3>Guess What Letter I'm Thinking Of:</h3>
+            <hr />
+            <p id="wins">Wins: 0</p>
+            <p id="losses">Losses: 0</p>
+            <p id="guessesLeft">Guesses Left: 9</p>
+            <p id="guessesSoFar">Guesses So Far: </p>
+            <ul id="guesses" class="list-inline"></ul>
+
+
+
         </div>
     </div>
 
@@ -26,14 +36,15 @@
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS then Local -->
+    <!-- Optional bootstrap JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS, then Local -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!-- local js -->
     <script src="./assets/javascript/game.js"></script>
 
 
